sample/SyntaxError/s01.py
def sum(n):
    s = 0
    fo i in range(1, n + 1):
        s += i
    return s

x = "9"
print(sum(x))